[package]
name = "chain"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[lib]
doctest = false

[dependencies]
rustc-hex = "2"
bitcrypto = { path = "../crypto" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
serialization_derive = { path = "../serialization_derive" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bitcoin = "0.28.1"
