[package]
name = "keys"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[lib]
doctest = false

[dependencies]
rustc-hex = "2"
base58 = "0.2"
bech32 = "0.9.1"
bitcrypto = { path = "../crypto" }
derive_more = "0.99"
lazy_static = "1.4"
rand = "0.6"
primitives = { path = "../primitives" }
secp256k1 = { version = "0.20", features = ["rand", "recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
